# smcryptoc

./: CMakeLists.txt  README.md
include/smcryptoc/: sm2.h  sm3.h  sm4.h  utils.h
src/: sm2.c  sm3.c  sm4.c  utils.c
tests/: CMakeLists.txt  test_sm2.c  test_sm3.c  test_sm4.c
